--- a/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/android/app/src/main/res/layout/activity_sign_up.xml
@@ -8,98 +8,83 @@
     android:background="#FFFFFF"
     tools:context=".view.academicianView.SignUpActivity">
 
-    <!-- Header -->
-    <LinearLayout
-        android:id="@+id/topBanner"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:background="@drawable/card_background"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/rounded_img"
-            app:srcCompat="@drawable/logo" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="7dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="USİ"
-                android:textColor="#FFFFFF"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Üniversite-Sanayi İşbirliği"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp" />
-        </LinearLayout>
-    </LinearLayout>
-
     <!-- Scrollview -->
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintTop_toBottomOf="@id/topBanner"
-        app:layout_constraintBottom_toTopOf="@id/bottomLogos"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Scroll içeriği -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="center_horizontal"
-            android:paddingVertical="20dp">
+            android:padding="20dp">
 
-            <!-- Başlık -->
+            <!-- Logo -->
+            <ImageView
+                android:id="@+id/logoTto"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="40dp"
+                app:layout_constraintBottom_toTopOf="@+id/appName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/usi_logo" />
+
             <TextView
+                android:id="@+id/appName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="40dp"
-                android:text="Akademisyen Kayıt Ol"
-                android:textSize="27sp"
-                android:textColor="#000000" />
-
-            <!-- Mail -->
-            <EditText
-                android:id="@+id/uniMail"
-                android:layout_width="320dp"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:background="@drawable/edittext_bg"
-                android:ems="14"
-                android:hint="Üniversite Mailinizi Giriniz"
-                android:inputType="text"
-                android:padding="12dp"
+                android:layout_gravity="center"
+                android:text="Akademisyen"
                 android:textColor="#000000"
-                android:textColorHint="#999999"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/logoTto" />
+
+            <TextView
+                android:id="@+id/signInText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:text="Hesap Oluştur"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/appName" />
+
+            <TextView
+                android:id="@+id/chooseText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:text="Şifrenizi Oluşturun"
+                android:textColor="#000000"
                 android:textSize="16sp"
-                android:textStyle="normal" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/welcomeText" />
 
             <!-- Şifre -->
             <LinearLayout
-                android:layout_width="320dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_gravity="center"
                 android:layout_marginVertical="5dp"
                 android:background="@drawable/edittext_bg"
                 android:orientation="horizontal"
@@ -131,8 +116,10 @@
 
             <!-- Şifre Tekrar -->
             <LinearLayout
-                android:layout_width="320dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_gravity="center"
                 android:layout_marginVertical="5dp"
                 android:background="@drawable/edittext_bg"
                 android:orientation="horizontal"
@@ -165,10 +152,12 @@
             <!-- Kayıt Ol -->
             <Button
                 android:id="@+id/btnSignUp"
-                android:layout_width="320dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="15dp"
-                android:backgroundTint="#F06E1B"
+                android:backgroundTint="#124090"
                 android:elevation="8dp"
                 android:onClick="signUp"
                 android:text="Kayıt Ol"
@@ -179,82 +168,88 @@
                 app:cornerRadius="10dp"
                 tools:ignore="OnClick" />
 
-            <!-- Geri Dön -->
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="140dp"
+                    android:layout_height="1dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:background="#999999" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="veya"
+                    android:textColor="#888888"
+                    android:textSize="15sp" />
+
+                <View
+                    android:layout_width="140dp"
+                    android:layout_height="1dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:background="#999999" />
+
+            </LinearLayout>
+
+            <!-- Hesabım var -->
             <Button
-                android:id="@+id/btnBack"
-                android:layout_width="320dp"
+                android:id="@+id/haveAccount"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="400dp"
-                android:backgroundTint="#FFFFFF"
-                android:elevation="8dp"
-                android:onClick="goPrevPage"
-                android:text="Geri Dön"
-                android:textColor="#F06E1B"
+                android:layout_marginHorizontal="5dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="5dp"
+                android:backgroundTint="#EEEEEE"
+                android:onClick="btnHaveAccount"
+                android:text="Bir hesabım var"
+                android:textColor="#000000"
                 android:textSize="15sp"
-                android:textStyle="bold"
-                android:translationZ="4dp"
                 app:cornerRadius="10dp"
-                app:strokeColor="#F06E1B"
-                app:strokeWidth="2dp"
                 tools:ignore="OnClick" />
+
+            <!-- Şifremi Unuttum -->
+            <Button
+                android:id="@+id/forgotPassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="5dp"
+                android:backgroundTint="#EEEEEE"
+                android:text="Şifremi Unuttum"
+                android:textColor="#000000"
+                android:textSize="15sp"
+                app:cornerRadius="10dp"
+                tools:ignore="OnClick" />
+
+            <!-- Alt Bilgi -->
+            <TextView
+                android:id="@+id/footerText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="400dp"
+                android:text="@string/text_signIn"
+                android:textAlignment="center"
+                android:textColor="#888888"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.491"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnIndustry" />
+
         </LinearLayout>
     </ScrollView>
-
-    <!-- FOOTER -->
-    <LinearLayout
-        android:id="@+id/bottomLogos"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:background="@drawable/card_background"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginBottom="23dp"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_img"
-            android:clipToOutline="true"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/logo" />
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginBottom="23dp"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/valilik" />
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginBottom="23dp"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_img"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/kosgeb" />
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginBottom="23dp"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_img"
-            android:clipToOutline="true"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/stb" />
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
